--- a/.github/workflows/ur-source-checks.yml
+++ b/.github/workflows/ur-source-checks.yml
@@ -43,20 +43,8 @@ jobs:
         Expand-Archive -Path "$WorkingDir\doxygen.zip"
         Add-Content $env:GITHUB_PATH "$WorkingDir\doxygen"
 
-    - name: "[Lin] Install hwloc"
-      working-directory: ${{github.workspace}}/unified-runtime
-      if: matrix.os == 'ubuntu-22.04'
-      run: .github/scripts/install_hwloc.sh
-
-    - name: "[Win] Install hwloc"
-      working-directory: ${{github.workspace}}/unified-runtime
-      if: matrix.os == 'windows-2022'
-      run: vcpkg install hwloc:x64-windows
-
     - name: Configure Unified Runtime project
       working-directory: ${{github.workspace}}/unified-runtime
-      env:
-        VCPKG_PATH: "C:/vcpkg/packages/hwloc_x64-windows"
       run: >
         cmake
         -B${{github.workspace}}/build
@@ -65,6 +53,7 @@ jobs:
         -DCMAKE_BUILD_TYPE=Debug
         -DUR_BUILD_TESTS=OFF
         -DUR_FORMAT_CPP_STYLE=ON
+        -DUMF_DISABLE_HWLOC=ON
 
     # Verifying license should be enough on a single OS
     - name: Verify that each source file contains a license
