--- a/.github/workflows/sycl-windows-build.yml
+++ b/.github/workflows/sycl-windows-build.yml
@@ -43,6 +43,7 @@ on:
         type: choice
         options:
           - "[]"
+          - '[sycl]'
           - '[llvm, clang, sycl, llvm_spirv, xptifw, libclc, libdevice]'
       build_cache_suffix:
         type: choice
@@ -164,6 +165,19 @@ jobs:
       if: always() && !cancelled() && contains(inputs.changes, 'libdevice')
       run: |
         cmake --build build --target check-libdevice
+    - name: Generate/diff new ABI symbols
+      if: always() && !cancelled() && contains(inputs.changes, 'sycl')
+      shell: bash
+      run: |
+        LLVM_BIN_PATH="build/bin" python.exe src/sycl/tools/abi_check.py --mode dump_symbols --output build/new_sycl_symbols_windows.dump build/bin/sycl?.dll
+        diff -Naur src/sycl/test/abi/sycl_symbols_windows.dump build/new_sycl_symbols_windows.dump || true
+    - name: Upload new ABI symbols
+      if: always() && !cancelled() && contains(inputs.changes, 'sycl')
+      uses: actions/upload-artifact@v4
+      with:
+        name: sycl_windows_abi_symbols
+        path: build/new_sycl_symbols_windows.dump
+        retention-days: ${{ inputs.retention-days }}
     - name: Install
       if: ${{ always() && !cancelled() && steps.build.conclusion == 'success' }}
       shell: bash
