--- a/.github/workflows/sycl-post-commit.yml
+++ b/.github/workflows/sycl-post-commit.yml
@@ -46,7 +46,7 @@ jobs:
         include:
           - name: Intel GEN12 Graphics with Level Zero
             runner: '["Linux", "gen12"]'
-            target_devices: level_zero:gpu;opencl:fpga
+            target_devices: level_zero:gpu
             reset_intel_gpu: true
           - name: Intel Arc A-Series Graphics with Level Zero
             runner: '["Linux", "arc"]'
