[CI] Update sycl-linux-run-tests.yml
As discussed in https://github.com/intel/llvm/pull/17074 rename ref to repo_ref.

--- a/.github/workflows/sycl-linux-precommit-aws.yml
+++ b/.github/workflows/sycl-linux-precommit-aws.yml
@@ -71,7 +71,7 @@ jobs:
       target_devices: cuda:gpu
       # No idea why but that seems to work and be in sync with the main
       # pre-commit workflow.
-      ref: ${{ github.event.workflow_run.referenced_workflows[0].sha }}
+      repo_ref: ${{ github.event.workflow_run.referenced_workflows[0].sha }}
 
       sycl_toolchain_artifact: sycl_linux_default
       sycl_toolchain_archive: llvm_sycl.tar.zst
