[CI] Run git gc when creating a repo cache
Signed-off-by: Sarnie, Nick <nick.sarnie@intel.com>

--- a/devops/actions/cached_checkout/action.yml
+++ b/devops/actions/cached_checkout/action.yml
@@ -34,6 +34,7 @@ runs:
         git pull --prune
       else
         git clone https://github.com/${{ inputs.repository }}.git .
+        git gc
       fi
   - name: Checkout
     env:
