--- a/.github/workflows/sycl-windows-build.yml
+++ b/.github/workflows/sycl-windows-build.yml
@@ -124,13 +124,13 @@ jobs:
         IF NOT EXIST D:\github\_work\cache\${{inputs.build_cache_suffix}} MKDIR D:\github\_work\cache\${{inputs.build_cache_suffix}}
         python.exe src/buildbot/configure.py -o build ^
           --ci-defaults %ARGS% ^
-          --cmake-opt="-DCMAKE_C_COMPILER=${{inputs.compiler}}" ^
-          --cmake-opt="-DCMAKE_CXX_COMPILER=${{inputs.compiler}}" ^
-          --cmake-opt="-DCMAKE_INSTALL_PREFIX=%GITHUB_WORKSPACE%\install" ^
-          --cmake-opt="-DCMAKE_CXX_COMPILER_LAUNCHER=ccache" ^
-          --cmake-opt="-DCMAKE_C_COMPILER_LAUNCHER=ccache" ^
-          --cmake-opt="-DLLVM_INSTALL_UTILS=ON" ^
-          --cmake-opt="-DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD=SPIRV"
+          "-DCMAKE_C_COMPILER=${{inputs.compiler}}" ^
+          "-DCMAKE_CXX_COMPILER=${{inputs.compiler}}" ^
+          "-DCMAKE_INSTALL_PREFIX=%GITHUB_WORKSPACE%\install" ^
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache ^
+          -DCMAKE_C_COMPILER_LAUNCHER=ccache ^
+          -DLLVM_INSTALL_UTILS=ON ^
+          -DLLVM_EXPERIMENTAL_TARGETS_TO_BUILD=SPIRV
     - name: Build
       id: build
       shell: bash
