--- a/.github/workflows/sycl-linux-run-tests.yml
+++ b/.github/workflows/sycl-linux-run-tests.yml
@@ -171,17 +171,14 @@ on:
           Extra options to be added to LIT_OPTS.
         default: ''
 
-      install_igc_driver:
+      reset_intel_gpu:
+        description: |
+          Reset intel GPUs
         type: choice
         options:
           - false
           - true
 
-      install_dev_igc_driver:
-        type: choice
-        options:
-          - false
-          - true
       e2e_testing_mode:
         type: choice
         options:
@@ -203,14 +200,7 @@ jobs:
     env: ${{ fromJSON(inputs.env) }}
     steps:
     - name: Reset Intel GPU
-      if: >
-        ${{ inputs.reset_intel_gpu == 'true' ||
-              ( github.event_name == 'workflow_dispatch' &&
-                inputs.tests_selector == 'compute-benchmarks' &&
-                inputs.runner == '["PVC_PERF"]' ) }}
-      # Specifically, manual dispatch running compute-benchmarks on PVC_PERF
-      # should reset intel GPU, since manual dispatch does not provide an option
-      # for users to pick whether or not manual dispatch resets the GPU.
+      if: inputs.reset_intel_gpu == 'true'
       run: |
         sudo mount -t debugfs none /sys/kernel/debug
         base_dir="/sys/kernel/debug/dri"
