--- a/.github/workflows/ur-build-hw.yml
+++ b/.github/workflows/ur-build-hw.yml
@@ -120,7 +120,32 @@ jobs:
     - name: Install build tools
       run: |
         export DEBIAN_FRONTEND=noninteractive
-        bash devops/scripts/install_build_tools.sh
+        apt update && apt install -yqq \
+          build-essential \
+          cmake \
+          ninja-build \
+          ccache \
+          git \
+          python3 \
+          python3-psutil \
+          python-is-python3 \
+          python3-pip \
+          ocl-icd-opencl-dev \
+          vim \
+          libffi-dev \
+          libva-dev \
+          libtool \
+          wget \
+          sudo \
+          zstd \
+          zip \
+          unzip \
+          pigz \
+          jq \
+          curl \
+          libhwloc-dev \
+          libzstd-dev \
+          time
 
     - name: Install UR python dependencies
       working-directory: ${{github.workspace}}/unified-runtime
